<resources>
    <string name="app_name">Sport Timer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittle_all_time">Человек в упражнении:</string>
    <string name="tittle_time_work">Время упражнения, сек:</string>
    <string name="tittle_time_to_rest">Время отдыха, сек:</string>
    <string name="button_save">Сохранить</string>
    <string name="slider_description">число человек в упражнении</string>
    <string name="timeWork_description">время отдыха</string>
    <string name="timeRest_description">время отдыха</string>
    <string name="tittle_number_of_human">Человек:</string>
    <string name="tittle_work_time">Время упражнения, сек:</string>
    <string name="tittle_rest_time">Время отдыха, сек:</string>
    <string name="button_work">Start</string>
    <string name="tittle_start_work_time">Общее время упражнений, сек:</string>
    <string name="tittle_rest_work_time">Общее время отдыха, сек:</string>
    <string name="conv_button">В минуты:</string>
    <string name="time_to_training">Общее время:</string>
</resources>