<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Settings">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleAllTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tittle_all_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/slider_description"
            android:stepSize="1"
            android:value="1"
            android:layout_marginTop="20dp"
            app:thumbColor="#6b0001"
            app:thumbStrokeColor="@color/white"
            app:thumbStrokeWidth="2dp"
            app:trackColor="@color/white"
            app:labelBehavior="floating"
            app:thumbRadius="10dp"
            android:valueFrom="1"
            android:valueTo="4"
            app:layout_constraintTop_toBottomOf="@+id/tittleAllTime" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleTimeToWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tittle_time_work"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/slider" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputTimeWork"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:contentDescription="@string/timeWork_description"
            android:layout_marginTop="20dp"
            android:background="#6b0001"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittleTimeToWork" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleTimeToRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/tittle_time_to_rest"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/inputTimeWork" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputTimeToRest"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription="@string/timeRest_description"
            android:inputType="number"
            android:background="#6b0001"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittleTimeToRest" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/inputTimeToRest" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSaveSettings"
            android:layout_width="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/button_save"
            android:padding="15dp"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>