<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgound"
    tools:context=".MainWindow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleNumberOfHuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tittle_number_of_human"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/numberOfHuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tittleNumberOfHuman"
            app:layout_constraintStart_toEndOf="@+id/tittleNumberOfHuman"
            app:layout_constraintTop_toTopOf="@+id/tittleNumberOfHuman" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleWorkTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/tittle_work_time"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittleNumberOfHuman" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/workTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tittleWorkTime"
            app:layout_constraintStart_toStartOf="@+id/tittleWorkTime"
            app:layout_constraintTop_toBottomOf="@+id/tittleWorkTime" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plusWorkTime"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/plus_time"
            app:layout_constraintBottom_toBottomOf="@+id/workTime"
            app:layout_constraintEnd_toStartOf="@+id/workTime"
            app:layout_constraintTop_toTopOf="@+id/workTime" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minusWorkTime"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/minus_time"
            app:layout_constraintBottom_toBottomOf="@+id/workTime"
            app:layout_constraintStart_toEndOf="@+id/workTime"
            app:layout_constraintTop_toTopOf="@+id/workTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleRestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/tittle_rest_time"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tittleWorkTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tittleWorkTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/restTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tittleRestTime"
            app:layout_constraintStart_toStartOf="@+id/tittleRestTime"
            app:layout_constraintTop_toBottomOf="@+id/tittleRestTime" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plusRestTime"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/plus_time"
            app:layout_constraintBottom_toBottomOf="@+id/restTime"
            app:layout_constraintEnd_toStartOf="@+id/restTime"
            app:layout_constraintTop_toTopOf="@+id/restTime" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minusRestTime"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/minus_time"
            app:layout_constraintBottom_toBottomOf="@+id/restTime"
            app:layout_constraintStart_toEndOf="@+id/restTime"
            app:layout_constraintTop_toTopOf="@+id/restTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/restTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonWork"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:padding="10dp"
            android:text="@string/button_work"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleStatWorkTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/tittle_start_work_time"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonWork" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/statWorkTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="@+id/tittleStatWorkTime"
            app:layout_constraintStart_toEndOf="@+id/tittleStatWorkTime"
            app:layout_constraintTop_toTopOf="@+id/tittleStatWorkTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tittleRestWorkTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tittle_rest_work_time"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittleStatWorkTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/statRestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/holo_orange_light"
            app:layout_constraintBottom_toBottomOf="@+id/tittleRestWorkTime"
            app:layout_constraintStart_toEndOf="@+id/tittleRestWorkTime"
            app:layout_constraintTop_toTopOf="@+id/tittleRestWorkTime" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/convButton"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_in_min"
            android:padding="4dp"
            android:text="@string/conv_button"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tittleRestWorkTime"
            app:layout_constraintTop_toBottomOf="@+id/tittleRestWorkTime" />

        <TextView
            android:id="@+id/conv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/conv2"
            app:layout_constraintEnd_toStartOf="@+id/conv2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/conv2" />

        <TextView
            android:id="@+id/conv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/convButton" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:checked="true"
            android:visibility="invisible"
            android:button="@drawable/checkbox_selector"
            app:layout_constraintBottom_toBottomOf="@+id/statWorkTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/statWorkTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fullTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/holo_green_light"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/convertTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_light"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/conv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/conv2"
            app:layout_constraintTop_toTopOf="@+id/conv2" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#6b0001"
            app:layout_constraintTop_toBottomOf="@+id/conv2"
            tools:layout_editor_absoluteX="1dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#6b0001"
            app:layout_constraintTop_toBottomOf="@+id/minusWorkTime"
            tools:layout_editor_absoluteX="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>